--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Roy Kathurima",
   "license": "MIT",
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server": "json-server --watch data.json"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.2.0",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.15"
   }
 }
