--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "scripts": {
     "dev:server": "nodemon server.js",
-    "json:server": "json-server --watch data.json"
+    "json:server": "json-server --watch data.json",
+    "dev": "concurrently --kill-others-on-fail -n \"nodemon, json-server\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn dev:server\" \"yarn json:server\""
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "concurrently": "^7.0.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.2.0",
